--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "spicetify-creator": "^1.0.17"
+  },
+  "dependencies": {
+    "bare-tcp": "^2.2.0"
   }
 }
